--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,14 +2,14 @@
 name = "todolist"
 version = "0.1.0"
 description = ""
-authors = ["leo.barberis@telecom-paris.fr <leo.barberis@telecom-paris.fr>"]
+authors = ["Leo Barberis <leo.barberis@telecom-paris.fr>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.10.12"
 
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.dev-dependencies]
 sphinx = "^7.2.6"
 sphinx-rtd-theme = "^1.3.0"
 
