--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ python = ">=3.10.12"
 sphinx = "^7.2.6"
 sphinx-rtd-theme = "^1.3.0"
 
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.1.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
