--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ python = "^3.11"
 [tool.poetry.group.dev.dependencies]
 sphinx = "^7.2.6"
 sphinx-rtd-theme = "^1.3.0"
+flake8 = "^6.1.0"
+coverage = "^7.3.2"
 
 [build-system]
 requires = ["poetry-core"]
