--- a/.github/workflows/todolist_workflow.yml
+++ b/.github/workflows/todolist_workflow.yml
@@ -1,44 +1,62 @@
-name: CI for todolist
+name: Python CI/CD with Poetry for todolist
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  build:
-
+  autopep8:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.11'
+      - run: pip install autopep8
+      - run: autopep8 --recursive --in-place .
+      - run: git config --global user.name 'GitHub Actions'
+      - run: git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+      - run: git add -A
+      - run: git commit -m "Format code with autopep8" || echo "No changes to commit"
+      - run: git push
 
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.11
+  unittest:
+    needs: autopep8
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.11'
+      - run: curl -sSL https://install.python-poetry.org | python3 -
+      - run: poetry install
+      - run: poetry run python -m unittest tests/test_tache.py
 
-    - name: Install Poetry
-      run: |
-        curl -sSL https://install.python-poetry.org | python3 -
+  coverage:
+    needs: unittest
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.11'
+      - run: curl -sSL https://install.python-poetry.org | python3 -
+      - run: poetry install
+      - run: poetry run coverage run -m unittest tests/test_tache.py
+      - run: poetry run coverage report -m
 
-    - name: Cache Poetry
-      uses: actions/cache@v2
-      with:
-        path: ~/.cache/pypoetry
-        key: ${{ runner.os }}-poetry-${{ hashFiles('**/pyproject.toml') }}
-        restore-keys: ${{ runner.os }}-poetry-
-
-    - name: Install dependencies
-      run: poetry install
-
-    - name: Check PEP 8 compliance
-      run: poetry run flake8
-
-    - name: Run specified test with coverage
-      run: |
-        poetry run coverage run -m unittest tests/test_tache.py
-
-    - name: Generate coverage report
-      run: poetry run coverage report
+  build:
+    needs: coverage
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.11'
+      - run: curl -sSL https://install.python-poetry.org | python3 -
+      - run: poetry install
+      - run: poetry build
