--- a/.github/workflows/todolist_workflow.yml
+++ b/.github/workflows/todolist_workflow.yml
@@ -47,7 +47,7 @@ jobs:
       - run: curl -sSL https://install.python-poetry.org | python3 -
       - run: poetry install
       - run: poetry run coverage run -m unittest tests/test_tache.py
-      - run: poetry run coverage report -m
+      - run: poetry run coverage report -m > coverage.txt
 
   build:
     needs: coverage
