--- a/.github/workflows/todolist_workflow.yml
+++ b/.github/workflows/todolist_workflow.yml
@@ -35,6 +35,7 @@ jobs:
       - run: curl -sSL https://install.python-poetry.org | python3 -
       - run: poetry install
       - run: poetry run python -m unittest tests/test_tache.py
+      - run: poetry run python -m unittest tests/test_todolist.py
 
   coverage:
     needs: unittest
