--- a/.github/workflows/todolist_workflow.yml
+++ b/.github/workflows/todolist_workflow.yml
@@ -32,6 +32,7 @@ jobs:
       - run: curl -sSL https://install.python-poetry.org | python3 -
       - run: poetry install
       - run: poetry run python -m unittest tests/test_tache.py
+      - run: poetry run python -m unittest tests/todolist_tache.py
 
   coverage:
     needs: unittest
@@ -44,6 +45,7 @@ jobs:
       - run: curl -sSL https://install.python-poetry.org | python3 -
       - run: poetry install
       - run: poetry run coverage run -m unittest tests/test_tache.py
+      - run: poetry run coverage run -m unittest tests/todolist_tache.py
       - run: poetry run coverage report -m > coverage.txt
 
   build:
