--- a/.github/workflows/todolist_workflow.yml
+++ b/.github/workflows/todolist_workflow.yml
@@ -45,8 +45,21 @@ jobs:
       - run: curl -sSL https://install.python-poetry.org | python3 -
       - run: poetry install
       - run: poetry run coverage run -m unittest tests/test_tache.py
-      - run: poetry run coverage run -m unittest tests/test_todolist.py
+      - run: poetry run coverage run -a unittest tests/test_todolist.py
+      - run: |
+          COVERAGE=$(poetry run coverage report -m | grep 'TOTAL' | awk '{print $6}' | sed 's/%//')
+          echo "Coverage: $COVERAGE%"
+          if [[ "$COVERAGE" -lt 90 ]]; then
+            echo "Test coverage is below 90%."
+            exit 1
+          fi
       - run: poetry run coverage report -m > coverage.txt
+      # Add access to the report
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage-report
+          path: coverage.txt
 
   build:
     needs: coverage
