--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
 [tool.poetry]
 name = "todolist"
-version = "0.1.0"
+version = "1.0.0"
 description = ""
-authors = ["Leo Barberis <leo.barberis@telecom-paris.fr>"]
+authors = ["Leo Barberis <leo.barberis@telecom-paris.fr>", "Marc Edouard <marc.edouard@telecom-paris.fr>", "Anaelle Baudant-Cojan <cojan-23@telecom-paris.fr>"]
 readme = "README.md"
-
 [tool.poetry.dependencies]
 python = ">=3.10.12"
 
